fixing modal on small screen sizes

--- a/assets/stylesheets/globals/_base.scss
+++ b/assets/stylesheets/globals/_base.scss
@@ -108,6 +108,7 @@ input[type="number"]::-webkit-outer-spin-button {
 #ModalContainer {
   background-color: white;
   border-radius: 5px;
+  top: 10px !important;
   margin-left: 5% !important;
   width: 90% !important;
   padding: 10px;
